@@ -353,6 +353,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("hashtable-contains?"),
         SA("hashtable-copy"),
         SA("hashtable-delete!"),
+        SA("hashtable-entries"),
         SA("hashtable-for-each"),
         SA("hashtable-keys"),
         SA("hashtable-keys->list"),
@@ -979,6 +980,7 @@ const Object* scheme::getBuiltinSymbols() {
         SA("top level :$:generic-assoc"),
         SA("top level :$:get-closure-name"),
         SA("top level :$:hashtable->alist"),
+        SA("top level :$:hashtable-entries"),
         SA("top level :$:hashtable-for-each"),
         SA("top level :$:hashtable-keys->list"),
         SA("top level :$:hashtable-map"),
